force-app/main/default/objects/SPEN_DamageFormStaging__c/SPEN_DamageFormStaging__c.object-meta.xml
<CustomObject>
    <label>Damage Form Staging</label>
    <nameField>
        <label>Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Damage Form Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>