force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalComments__c</fullName>
    <description>CRMD-7691</description>
    <label>Additional Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>