force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Cableavoidancetoolsonsite__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Cableavoidancetoolsonsite__c</fullName>
    <description>CRMD-7691</description>
    <label>Were Cable avoidance tools on-site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>