force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Cableprotection__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Cableprotection__c</fullName>
    <description>CRMD-7691</description>
    <label>Cable protection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tape</fullName>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
            <value>
                <fullName>Duct</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>