force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_CableprotectionOther__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CableprotectionOther__c</fullName>
    <description>CRMD-7691</description>
    <label>Cable protection Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>