force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseNumber__c</fullName>
    <description>CRMD-7691</description>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>