force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Category__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Category__c</fullName>
    <description>CRMD-7691</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U/G</fullName>
            </value>
            <value>
                <fullName>O/H</fullName>
            </value>
            <value>
                <fullName>U/G &amp; O/H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>