force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Conductortypeother__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Conductortypeother__c</fullName>
    <description>CRMD-7691</description>
    <label>Conductor type other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>