force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_ContractorCity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractorCity__c</fullName>
    <description>CRMD-7691</description>
    <label>Contractor City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>