force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_ContractorContactTelephoneNo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractorContactTelephoneNo__c</fullName>
    <description>CRMD-7691</description>
    <label>Contractor Contact Telephone No.</label>
    <type>Phone</type>
</CustomField>