force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_DamagedOther__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DamagedOther__c</fullName>
    <description>CRMD-7691</description>
    <label>Damaged Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>