force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <label>Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>