force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_EmployerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmployerName__c</fullName>
    <description>CRMD-7691</description>
    <label>Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>