force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_FurtherinformationaboutdamageOH__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FurtherinformationaboutdamageOH__c</fullName>
    <description>CRMD-7691</description>
    <label>Further information about damage (O/H)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>