force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_FurtherInformationAboutDamageUG__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FurtherInformationAboutDamageUG__c</fullName>
    <description>CRMD-7691</description>
    <label>Further Information About Damage (U/G)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>