force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_GroundClearanceor52m__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GroundClearanceor52m__c</fullName>
    <description>CRMD-7691</description>
    <label>Ground Clearance &gt; or = 5.2m?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>