force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_HastherebeenanInjuryorFatality__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HastherebeenanInjuryorFatality__c</fullName>
    <description>CRMD-7940</description>
    <label>Has there been an Injury or Fatality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Fatality</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>