force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_HVOther__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HVOther__c</fullName>
    <description>CRMD-7691</description>
    <label>HV Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>