force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_IfNoWhatHeightmGC__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IfNoWhatHeightmGC__c</fullName>
    <description>CRMD-7691</description>
    <inlineHelpText>GroundClearanceHeight</inlineHelpText>
    <label>If No, What Height(m)?</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>