force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_IfNoWhatHeightmRCC__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IfNoWhatHeightmRCC__c</fullName>
    <description>CRMD-7691</description>
    <inlineHelpText>RoadCrossingClearanceHeight</inlineHelpText>
    <label>If No, What Height(m)?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>