force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_IfYesIsRoadCrossingClearanceor58__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IfYesIsRoadCrossingClearanceor58__c</fullName>
    <description>CRMD-7691</description>
    <label>Road Crossing Clearance Check &gt; or =5.8?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>