force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Incident_Number__c</fullName>
    <label>Incident Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>