force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_IncidentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentType__c</fullName>
    <description>CRMD-7940</description>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Customer Property</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Latent Damage</fullName>
            </value>
            <value>
                <fullName>Road Traffic Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>