force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_IsMigrated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Migrated</label>
    <type>Checkbox</type>
</CustomField>