force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_LVList__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LVList__c</fullName>
    <description>CRMD-7691</description>
    <label>LV List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Street Lighting</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Un-Metered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>