force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_MaterialDetails__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaterialDetails__c</fullName>
    <description>CRMD-7831</description>
    <label>Material Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>