force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_OtherIDNOUtilityCompany__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherIDNOUtilityCompany__c</fullName>
    <description>CRMD-7940</description>
    <label>Other IDNO Utility Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>