force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_OtherUtilitiesInvolved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherUtilitiesInvolved__c</fullName>
    <description>CRMD-7940</description>
    <inlineHelpText>Other Utilities Involved</inlineHelpText>
    <label>Who?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Telecoms</fullName>
            </value>
            <value>
                <fullName>Other IDNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>