force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Photos_Missing__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Photos_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Missing</label>
    <type>Checkbox</type>
</CustomField>