force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_PoliceIncidentNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PoliceIncidentNumber__c</fullName>
    <description>CRMD-7940</description>
    <label>Police Incident Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>