force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_PrinciplePartyAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyAddress__c</fullName>
    <description>CRMD-7691</description>
    <label>Principle Party Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>