force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_PrinciplePartyCity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyCity__c</fullName>
    <description>CRMD-7691</description>
    <label>Principle Party City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>