force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_PrinciplePartyOther__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PrinciplePartyOther__c</fullName>
    <label>Principle Party Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>