force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_ResponsiblePersonContactTelephoneNo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResponsiblePersonContactTelephoneNo__c</fullName>
    <description>CRMD-7691</description>
    <label>Responsible Person Contact Telephone No.</label>
    <type>Phone</type>
</CustomField>