force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_ResponsiblePersonName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResponsiblePersonName__c</fullName>
    <description>CRMD-7691</description>
    <label>Responsible Person Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>