force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>Session Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>