force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_SharepointURL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SharepointURL__c</fullName>
    <description>CRMD-7831</description>
    <label>Sharepoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>