force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_Signatureof3rdParty__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Signatureof3rdParty__c</fullName>
    <description>CRMD-7691</description>
    <label>Signature of 3rd Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>