force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_TelecomsUtilityContactName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TelecomsUtilityContactName__c</fullName>
    <description>CRMD-7940</description>
    <label>Telecoms Utility Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>