force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_TelecomsUtilityReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TelecomsUtilityReferenceNumber__c</fullName>
    <description>CRMD-7940</description>
    <label>Telecoms Utility Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>