force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_VehicleRegistration__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VehicleRegistration__c</fullName>
    <description>CRMD-7691</description>
    <label>Vehicle Registration</label>
    <length>11</length>
    <type>Text</type>
</CustomField>