force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_VoltageType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VoltageType__c</fullName>
    <description>CRMD-7691</description>
    <label>Voltage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>HV</fullName>
            </value>
            <value>
                <fullName>LV &amp; HV</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>