force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WasDamageAssessedby3rdParty__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WasDamageAssessedby3rdParty__c</fullName>
    <description>CRMD-7691</description>
    <label>Was Damage Assessed by 3rd Party?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>