force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WaterUtilityContactName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WaterUtilityContactName__c</fullName>
    <description>CRMD-7940</description>
    <label>Water Utility Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>