force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WaterUtilityContactNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WaterUtilityContactNumber__c</fullName>
    <description>CRMD-7940</description>
    <label>Water Utility Contact Number</label>
    <type>Phone</type>
</CustomField>