force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WereMaterialsUsedtoresolveDamage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WereMaterialsUsedtoresolveDamage__c</fullName>
    <description>CRMD-7940</description>
    <inlineHelpText>Were Materials Used to resolve Damage caused by 3PD?</inlineHelpText>
    <label>Were Materials Used to resolve Damage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>