force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WereOtherUtilitiesInvolved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WereOtherUtilitiesInvolved__c</fullName>
    <description>CRMD-7940</description>
    <label>Were Other Utilities Involved?:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>