force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WhathasbeenDamaged__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WhathasbeenDamaged__c</fullName>
    <description>CRMD-7691</description>
    <label>What has been Damaged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>O/H Line</fullName>
            </value>
            <value>
                <fullName>Cable Head</fullName>
            </value>
            <value>
                <fullName>LV Pillar</fullName>
            </value>
            <value>
                <fullName>Unmetered Supply</fullName>
            </value>
            <value>
                <fullName>Sub Station</fullName>
            </value>
            <value>
                <fullName>Switch Gear</fullName>
            </value>
            <value>
                <fullName>Pole</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>