force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WhathasbeendonetoResolve__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WhathasbeendonetoResolve__c</fullName>
    <description>CRMD-7691</description>
    <label>What has been done to Resolve?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>Repair to Original Spec</fullName>
            </value>
            <value>
                <fullName>Temp. Repair to Modified Spec</fullName>
            </value>
            <value>
                <fullName>Perm. Repair to Modified Spec</fullName>
            </value>
            <value>
                <fullName>Diverted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>