force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_WhichEmergencyServicesInvolved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WhichEmergencyServicesInvolved__c</fullName>
    <description>CRMD-7940</description>
    <inlineHelpText>Which Emergency Services Involved</inlineHelpText>
    <label>Who?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Fire Brigade</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>