force-app/main/default/objects/SPEN_DamageFormStaging__c/fields/SPEN_YourLoginID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_YourLoginID__c</fullName>
    <description>CRMD-7691</description>
    <label>Your Login ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>